# wallpaper-engine

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  index.html
docs/auth/callback/: index.html
docs/superpowers/plans/: 2026-05-23-wallpaper-engine-mvp.md
installers/: SHA256SUMS
src/: App.css  App.tsx  ClerkDeepLinkBridge.tsx  appLog.ts  appState.test.ts  appState.tsx  clerkDesktopAuth.test.ts  clerkDesktopAuth.ts  confirmAction.test.ts  confirmAction.ts  hotkeyCapture.test.ts  hotkeyCapture.ts  searchFilters.test.ts  searchFilters.ts  searchFlow.test.ts  searchFlow.ts  settingsFlow.test.ts  settingsFlow.ts  sidebarLayout.test.ts  themePreference.test.ts  themePreference.ts  types.ts  viewScroll.test.ts  viewScroll.ts  wallpaperQuality.test.ts  wallpaperQuality.ts  wallpaperSelection.test.ts  wallpaperSelection.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  app_log.rs  cache.rs  lib.rs  models.rs  quality.rs  settings.rs  sync.rs  wallpaper.rs
src/components/: ErrorBoundary.tsx  FallbackImage.tsx  MoodBar.tsx  WallCard.tsx  WallGridSkeleton.tsx
src/pages/: Controls.tsx  Home.tsx  Library.tsx  Search.tsx  Settings.tsx  Sync.tsx  renderStates.test.tsx
tools/windows-uninstaller/: Cargo.toml
